2010-11-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (find-child-under-mouse): Do not find
	hidden windows.

2010-11-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-mode-display-accel-windows):
	Do not display the accel window for unmanaged windows.

2010-11-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (set-current-root): Handle
	window-parent in set-current-root.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Do not
	focus the parent child when the current root is a window.

2010-11-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-windows-current-child-mode):
	New function an bindings.

	* src/clfswm-layout.lisp (tile-layout, set-tile-layout): Fill
	blanks if needed.

2010-11-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-layout-ask-keep-position): New
	function to let the user choose to keep child position with
	tile layout.

	* src/clfswm-internal.lisp (remove-frame-data-slot): New
	function.

2010-11-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (frame-select-next-child)
	(frame-select-previous-child): New functions and bindings. Select
	the next/previous child in the current frame.

2010-10-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-mode-complet): New function: Handle
	completion in query-mode.

2010-10-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-print-string): Handle long lines
	correctly.

2010-10-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-create-window): Ensure that
	all characters are printable.

2010-10-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/server/server.lisp: Load clfswm client code in the main
	program and let the user start it with a --client command line
	option.
